T04: production capture runtime with shell reuse, settling, and fixed X11 grab fallback
Replaces the skeleton CopyAreaCapture with CaptureRuntime behind the same
frozen Capture interface. The runtime owns one reused shell per display,
isolates specimens by disposing children and invalidating the client area,
settles via a paint-then-quiescence condition instead of fixed sleeps, and
captures through GC.copyArea (primary) or an X11 window grab by id
(fallback), both as device-zoom pixels.

Fixes the ADR-001 crop-origin defect: the old toDisplay*zoom formula
overshoots whenever screen density does not match the reported zoom, which
shifted the zoom-200 crop. The fallback now grabs the control's own window
by XID so the X server does the cropping, then declares the grabbed data's
true zoom basis so SWT's own DPI machinery yields byte-identical output to
copyArea at zoom 100 and 200.

Selftest grows from 8 to 13 checks: shell-reuse cross-talk isolation,
throwing-specimen failure-as-data, cross-process determinism, and strategy
agreement at zoom 100 and 200. CaptureProbe is the child-process helper.