@@ -29,10 +29,13 @@ import org.eclipse.swt.graphics.GC;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.graphics.ImageData;
 import org.eclipse.swt.graphics.PaletteData;
+import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Display;
+import org.eclipse.swt.widgets.Label;
 import org.eclipse.swt.visualoracle.impl.BasicCapturedImage;
 import org.eclipse.swt.visualoracle.impl.ButtonPushSpecimen;
-import org.eclipse.swt.visualoracle.impl.CopyAreaCapture;
+import org.eclipse.swt.visualoracle.impl.CaptureRuntime;
 import org.eclipse.swt.visualoracle.impl.ExactDiffer;
 import org.eclipse.swt.visualoracle.impl.NativeBackend;
 import org.eclipse.swt.visualoracle.impl.SwtRenderEnvs;
@@ -45,11 +48,13 @@ import org.eclipse.swt.visualoracle.result.ComparisonEntry;
 import org.eclipse.swt.visualoracle.result.RunResult;
 import org.eclipse.swt.visualoracle.spi.Backend;
 import org.eclipse.swt.visualoracle.spi.CapturedImage;
+import org.eclipse.swt.visualoracle.spi.CaptureFailedException;
 import org.eclipse.swt.visualoracle.spi.DefectClass;
 import org.eclipse.swt.visualoracle.spi.Differ;
 import org.eclipse.swt.visualoracle.spi.DiffResult;
 import org.eclipse.swt.visualoracle.spi.RenderEnv;
 import org.eclipse.swt.visualoracle.spi.Specimen;
+import org.eclipse.swt.visualoracle.spi.SpecimenContext;
 import org.eclipse.swt.visualoracle.spi.Tolerance;
 import org.eclipse.swt.visualoracle.spi.Verdict;
 
@@ -61,11 +66,12 @@ import org.eclipse.swt.visualoracle.spi.Verdict;
  */
 public class SelfTest {
 
-	private static final String SCRATCH_ROOT = "/tmp/opencode/oracle-t03";
+	private static final String SCRATCH_ROOT = "/tmp/opencode/oracle-t04";
 
 	private final PrintStream out;
 	private final List<Check> checks = new ArrayList<>();
 	private Path scratchDir;
+	private Path repoRoot;
 
 	public static void main(String[] args) {
 		System.exit(new SelfTest(System.out).run());
@@ -92,7 +98,7 @@ public class SelfTest {
 		long startNanos = System.nanoTime();
 		int index = 0;
 		try {
-			Path repoRoot = findRepoRoot();
+			repoRoot = findRepoRoot();
 			scratchDir = Files.createDirectories(Path.of(SCRATCH_ROOT,
 					"selftest-" + Long.toString(System.currentTimeMillis(), 36)));
 
@@ -106,6 +112,11 @@ public class SelfTest {
 					checkVerifyBackend(repoRoot, true));
 			check(index++, "verify-backend-passes-on-enabled-canvas", () ->
 					checkVerifyBackend(repoRoot, false));
+			check(index++, "shell-reuse-prevents-cross-talk", () -> checkShellReuseIsolation());
+			check(index++, "throwing-specimen-reported-as-failure", () -> checkThrowingSpecimen());
+			check(index++, "capture-deterministic-across-processes", () -> checkAcrossProcesses());
+			check(index++, "xgrab-agrees-with-copyarea-at-zoom100", () -> checkXGrabZoom100());
+			check(index++, "xgrab-agrees-with-copyarea-at-zoom200", () -> checkXGrabZoom200());
 		} catch (Throwable t) {
 			out.println("SELFTEST-ABORTED: " + t);
 			t.printStackTrace(out);
@@ -167,18 +178,19 @@ public class SelfTest {
 	}
 
 	private void checkSpecimenCapture() {
-		CopyAreaCapture capture = new CopyAreaCapture();
-		firstCapture = capture.capture(specimen, nativeBackend, env);
-		require(firstCapture.width() > 0 && firstCapture.height() > 0,
-				"captured image has zero extent");
+		try (CaptureRuntime capture = new CaptureRuntime()) {
+			firstCapture = capture.capture(specimen, nativeBackend, env);
+		}
+		requireExpectedExtent(firstCapture, specimen);
 		byte[] png = firstCapture.pngBytes();
 		require(png.length > 8 && (png[1] & 0xFF) == 'P' && (png[2] & 0xFF) == 'N' && (png[3] & 0xFF) == 'G',
 				"pngBytes does not carry the PNG signature");
 	}
 
 	private void checkDeterminism() {
-		CopyAreaCapture capture = new CopyAreaCapture();
-		secondCapture = capture.capture(specimen, nativeBackend, env);
+		try (CaptureRuntime capture = new CaptureRuntime()) {
+			secondCapture = capture.capture(specimen, nativeBackend, env);
+		}
 		require(imageDatasEqual(firstCapture.imageData(), secondCapture.imageData()),
 				"two captures of the same specimen differ in raw pixels");
 		require(Arrays.equals(sha256(firstCapture.pngBytes()), sha256(secondCapture.pngBytes())),
@@ -310,6 +322,178 @@ public class SelfTest {
 		}
 	}
 
+	// -------------------------------------------------- capture runtime checks
+
+	/**
+	 * Proves that a reused shell cannot leak one specimen's rendering into
+	 * the next: button, label, button again must give identical button bytes,
+	 * and the same as a fresh shell produces.
+	 */
+	private void checkShellReuseIsolation() {
+		Specimen label = new LabelSpecimen();
+		CapturedImage before;
+		CapturedImage after;
+		try (CaptureRuntime shared = new CaptureRuntime()) {
+			before = shared.capture(specimen, nativeBackend, env);
+			CapturedImage other = shared.capture(label, nativeBackend, env);
+			requireExpectedExtent(other, label);
+			after = shared.capture(specimen, nativeBackend, env);
+		}
+		require(imageDatasEqual(before.imageData(), after.imageData()),
+				"specimen changed after another specimen ran in between (shell cross-talk)");
+		try (CaptureRuntime fresh = new CaptureRuntime()) {
+			CapturedImage freshCapture = fresh.capture(specimen, nativeBackend, env);
+			require(Arrays.equals(before.pngBytes(), freshCapture.pngBytes()),
+					"reused-shell capture differs from fresh-shell capture");
+		}
+	}
+
+	/** A specimen whose creation throws is failure data, not a crashed run. */
+	private void checkThrowingSpecimen() {
+		Specimen bad = new ThrowingSpecimen();
+		try (CaptureRuntime runtime = new CaptureRuntime()) {
+			try {
+				runtime.capture(bad, nativeBackend, env);
+				throw new AssertionError("capture of a throwing specimen did not fail");
+			} catch (CaptureFailedException e) {
+				require(String.valueOf(e.getMessage()).contains(bad.id()),
+						"failure message does not identify the specimen: " + e.getMessage());
+				require(e.getCause() != null, "creation failure lost its cause");
+			}
+			CapturedImage afterFailure = runtime.capture(specimen, nativeBackend, env);
+			require(Arrays.equals(afterFailure.pngBytes(), firstCapture.pngBytes()),
+					"run did not continue cleanly after a failed specimen");
+		}
+	}
+
+	/** Same specimen, several separate processes, same bytes. */
+	private void checkAcrossProcesses() throws Exception {
+		ProbeResult first = runProbe("COPY_AREA", null);
+		ProbeResult second = runProbe("COPY_AREA", null);
+		require(first.sha256().equals(second.sha256()),
+				"two separate processes captured different PNG bytes: "
+						+ first.sha256() + " vs " + second.sha256());
+		String ownSha = sha256Hex(firstCapture.pngBytes());
+		require(first.sha256().equals(ownSha),
+				"cross-process capture differs from this process' own capture: "
+						+ first.sha256() + " vs " + ownSha);
+	}
+
+	/** Fallback and primary strategy must agree exactly at unit zoom. */
+	private void checkXGrabZoom100() throws Exception {
+		ProbeResult copyArea = runProbe("COPY_AREA", null);
+		ProbeResult xgrab = runProbe("X11_GRAB", null);
+		require(xgrab.width() == copyArea.width() && xgrab.height() == copyArea.height(),
+				"strategies disagree on extent at zoom 100: " + xgrab + " vs " + copyArea);
+		require(xgrab.sha256().equals(copyArea.sha256()),
+				"X11 grab and copyArea disagree at zoom 100: "
+						+ xgrab.sha256() + " vs " + copyArea.sha256());
+	}
+
+	/**
+	 * The zoom-200 agreement is what proves the crop-origin fix recorded in
+	 * ADR-001: with the old formula the X11 grab captured a shifted region at
+	 * zoom 200, so these two probes could never agree byte for byte.
+	 */
+	private void checkXGrabZoom200() throws Exception {
+		ProbeResult copyArea = runProbe("COPY_AREA", "-Dswt.autoScale=200");
+		ProbeResult xgrab = runProbe("X11_GRAB", "-Dswt.autoScale=200");
+		int expectedWidth = Math.round(specimen.preferredSize().x * 2f);
+		int expectedHeight = Math.round(specimen.preferredSize().y * 2f);
+		require(copyArea.width() == expectedWidth && copyArea.height() == expectedHeight,
+				"copyArea is not device-resolution at zoom 200: " + copyArea);
+		require(xgrab.width() == expectedWidth && xgrab.height() == expectedHeight,
+				"X11 grab is not device-resolution at zoom 200: " + xgrab);
+		require(xgrab.sha256().equals(copyArea.sha256()),
+				"X11 grab and copyArea disagree at zoom 200: "
+						+ xgrab.sha256() + " vs " + copyArea.sha256()
+						+ "; the crop origin fix regressed");
+	}
+
+	private void requireExpectedExtent(CapturedImage image, Specimen captured) {
+		int expectedWidth = Math.round(captured.preferredSize().x * env.zoomPercent() / 100f);
+		int expectedHeight = Math.round(captured.preferredSize().y * env.zoomPercent() / 100f);
+		require(image.width() == expectedWidth && image.height() == expectedHeight,
+				"captured extent " + image.width() + "x" + image.height() + ", expected "
+						+ expectedWidth + "x" + expectedHeight + " (preferred size scaled by zoom)");
+	}
+
+	// ------------------------------------------------------------ probe runs
+
+	private record ProbeResult(String sha256, int width, int height) {
+		@Override
+		public String toString() {
+			return width + "x" + height + " sha=" + sha256;
+		}
+	}
+
+	/**
+	 * Runs {@link CaptureProbe} in a child process on this display and
+	 * returns its single CAPTURE line. Graphical environment variables are
+	 * re-pinned so the child cannot silently leave headless mode.
+	 */
+	private ProbeResult runProbe(String strategy, String extraJvmOption) throws Exception {
+		List<String> command = new ArrayList<>();
+		command.add(ProcessHandle.current().info().command().orElse("java"));
+		command.add("--enable-native-access=ALL-UNNAMED");
+		String libPath = System.getProperty("java.library.path", "");
+		if (!libPath.isEmpty())
+			command.add("-Djava.library.path=" + libPath);
+		command.add("-Doracle.repoRoot=" + repoRoot);
+		if (extraJvmOption != null && !extraJvmOption.isEmpty())
+			command.add(extraJvmOption);
+		command.add("-cp");
+		command.add(System.getProperty("java.class.path"));
+		command.add(CaptureProbe.class.getName());
+		command.add(strategy);
+
+		ProcessBuilder pb = new ProcessBuilder(command);
+		pb.environment().remove("WAYLAND_DISPLAY");
+		pb.environment().remove("XDG_SESSION_TYPE");
+		pb.environment().put("GDK_BACKEND", "x11");
+		pb.redirectErrorStream(true);
+
+		Process process = pb.start();
+		StringBuilder output = new StringBuilder();
+		Thread reader = new Thread(() -> {
+			try (var in = process.getInputStream()) {
+				byte[] buffer = new byte[4096];
+				int read;
+				while ((read = in.read(buffer)) >= 0)
+					output.append(new String(buffer, 0, read, StandardCharsets.UTF_8));
+			} catch (IOException e) {
+				output.append('\n').append(e);
+			}
+		});
+		reader.start();
+		require(process.waitFor(180, TimeUnit.SECONDS), "capture probe timed out:\n" + tail(output.toString()));
+		reader.join(5000);
+
+		String text = output.toString();
+		for (String line : text.split("\n")) {
+			if (!line.startsWith("CAPTURE "))
+				continue;
+			String sha = null;
+			int width = -1;
+			int height = -1;
+			for (String field : line.split("\\s+")) {
+				int eq = field.indexOf('=');
+				if (eq < 0)
+					continue;
+				String key = field.substring(0, eq);
+				String value = field.substring(eq + 1);
+				switch (key) {
+					case "sha256" -> sha = value;
+					case "width" -> width = Integer.parseInt(value);
+					case "height" -> height = Integer.parseInt(value);
+				}
+			}
+			if (sha != null && width > 0 && height > 0)
+				return new ProbeResult(sha, width, height);
+		}
+		throw new AssertionError("probe '" + strategy + "' printed no usable CAPTURE line:\n" + tail(text));
+	}
+
 	// -------------------------------------------------------------- helpers
 
 	private interface SchemaMutation {
@@ -377,6 +561,52 @@ public class SelfTest {
 			return MessageDigest.getInstance("SHA-256").digest(data);
 		} catch (NoSuchAlgorithmException e) {
 			throw new IllegalStateException(e);
+		}
+	}
+
+	private static String sha256Hex(byte[] data) {
+		StringBuilder sb = new StringBuilder();
+		for (byte b : sha256(data))
+			sb.append(String.format("%02x", b));
+		return sb.toString();
+	}
+
+	/** Second widget family for the shell-reuse cross-talk check. */
+	private static final class LabelSpecimen implements Specimen {
+		@Override
+		public String id() {
+			return "test.label.default";
+		}
+
+		@Override
+		public org.eclipse.swt.graphics.Point preferredSize() {
+			return new org.eclipse.swt.graphics.Point(180, 48);
+		}
+
+		@Override
+		public Control create(Composite parent, SpecimenContext ctx) {
+			Label label = new Label(parent, SWT.BORDER);
+			label.setText("ABC");
+			ctx.configure(label);
+			return label;
+		}
+	}
+
+	/** A broken factory: creation must surface as failure data. */
+	private static final class ThrowingSpecimen implements Specimen {
+		@Override
+		public String id() {
+			return "test.throwing.default";
+		}
+
+		@Override
+		public org.eclipse.swt.graphics.Point preferredSize() {
+			return new org.eclipse.swt.graphics.Point(100, 40);
+		}
+
+		@Override
+		public Control create(Composite parent, SpecimenContext ctx) {
+			throw new IllegalStateException("deliberate failure for selftest");
 		}
 	}
 
